Change title from Arabic to 'S4-Binary'

--- a/Binary.html
+++ b/Binary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>محول النص/الثنائي - سايبر بانك</title>
+    <title>S4-Binary</title>
     <style>
         * {
             margin: 0;
