Rename title and footer in tic_tac_toe.html

--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -539,8 +539,7 @@
     
     <div class="container">
         <div class="header">
-            <h1 class="title">X-O Ultimate</h1>
-            <p class="subtitle">تيك تاك تو - تحدّي المستحيل</p>
+            <h1 class="title">X-O S46441</h1>
         </div>
 
         <!-- Mode Selection -->
@@ -604,7 +603,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>X-O Ultimate | تحدّي المستحيل | إصدار نهائي</p>
+            <p>S46441</p>
         </div>
     </div>
 
